--- a/TheLab/Saved/Config/Windows/SourceControlSettings.ini
+++ b/TheLab/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,1 +1,9 @@
+[SubversionSourceControl.SubversionSourceControlSettings]
+Repository="https://github.com/mossbros/LabMkII/TheLab"
+UserName=Axi5
+LabelsRoot=
+
+[SourceControl.SourceControlSettings]
+Provider=None
+
 
