--- a/TheLab/TheLab.uproject
+++ b/TheLab/TheLab.uproject
@@ -5,7 +5,7 @@
 	"EngineVersion": "4.1.0-0+UE4",
 	"PackageFileUE4Version": 352,
 	"PackageFileLicenseeUE4Version": 0,
-	"EngineAssociation": "",
+	"EngineAssociation": "4.1",
 	"FriendlyName": "",
 	"Description": "",
 	"Category": "",
